--- a/pigoWatchOS/Base.lproj/Interface.storyboard
+++ b/pigoWatchOS/Base.lproj/Interface.storyboard
@@ -1,16 +1,101 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14313.18" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch42" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14238.10"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--番茄列表-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider=""/>
+                <controller identifier="InterfaceController" title="番茄列表" id="AgC-eL-Hgc" customClass="InterfaceController">
+                    <items>
+                        <table alignment="left" id="kLJ-go-6ru">
+                            <items>
+                                <tableRow identifier="taskCell" id="gxE-1w-Qjt" customClass="PGTaskListCell">
+                                    <group key="rootItem" width="1" alignment="left" id="cwA-sX-ohI">
+                                        <items>
+                                            <label width="0.65000000000000002" height="1" alignment="left" text="Label" textAlignment="left" numberOfLines="2" id="JBn-bA-Saj">
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="font" type="system" pointSize="15"/>
+                                            </label>
+                                            <imageView width="25" height="25" alignment="right" verticalAlignment="center" image="icon_tomato" contentMode="scaleAspectFit" id="ooA-Wf-yP1"/>
+                                            <label alignment="right" verticalAlignment="center" text="0" id="U32-Sd-2az"/>
+                                        </items>
+                                        <connections>
+                                            <segue destination="PhE-CP-vsO" kind="modal" id="17Z-Af-ufx"/>
+                                        </connections>
+                                    </group>
+                                    <connections>
+                                        <outlet property="countLabel" destination="U32-Sd-2az" id="SH7-5e-yd8"/>
+                                        <outlet property="itemLabel" destination="JBn-bA-Saj" id="1YO-c0-I5d"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <connections>
+                        <outlet property="table" destination="kLJ-go-6ru" id="uGx-aI-Ukv"/>
+                    </connections>
+                </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="345"/>
+            <point key="canvasLocation" x="218.78260869565216" y="343.79464285714289"/>
+        </scene>
+        <!--专注-->
+        <scene sceneID="mFs-Qj-d2F">
+            <objects>
+                <controller identifier="PGFocusInterfaceController" title="专注" id="PhE-CP-vsO" customClass="PGFocusInterfaceController">
+                    <items>
+                        <label width="1" height="75" alignment="center" text="25:00" textAlignment="center" id="LtD-G7-RwL">
+                            <fontDescription key="font" type="system" pointSize="55"/>
+                        </label>
+                        <group width="1" height="30" alignment="left" id="F9u-GL-ccp">
+                            <items>
+                                <group width="0.48999999999999999" height="1" alignment="left" id="Oe9-Pq-ZdD">
+                                    <items>
+                                        <imageView width="25" height="25" alignment="center" verticalAlignment="center" image="icon_tomato" contentMode="scaleAspectFit" id="fAJ-tx-Ld2"/>
+                                        <label alignment="center" verticalAlignment="center" text="0" id="fwa-Ds-hrV"/>
+                                    </items>
+                                </group>
+                                <imageView width="2" height="0.59999999999999998" alignment="center" verticalAlignment="center" image="bg_white" id="63Z-po-2Zw"/>
+                                <group width="0.48999999999999999" alignment="right" id="Aw0-tN-dbW">
+                                    <items>
+                                        <label width="1" height="1" alignment="center" verticalAlignment="center" text="Label" textAlignment="center" id="2BY-51-Wt9"/>
+                                    </items>
+                                </group>
+                            </items>
+                        </group>
+                        <group width="1" height="45" alignment="left" id="TT7-SA-0ca">
+                            <items>
+                                <button width="120" height="100" alignment="center" verticalAlignment="center" title="Focus" id="LcG-Bp-T7f"/>
+                            </items>
+                            <edgeInsets key="margins" left="0.0" right="0.0" top="5" bottom="5"/>
+                        </group>
+                        <group width="1" height="45" alignment="left" id="SFn-Ad-nsf">
+                            <items>
+                                <group width="0.5" height="1" alignment="left" id="XG3-D9-evd">
+                                    <items>
+                                        <button width="120" height="100" alignment="center" verticalAlignment="center" title="Stop" id="y8r-Rx-riQ"/>
+                                    </items>
+                                    <edgeInsets key="margins" left="5" right="5" top="5" bottom="5"/>
+                                </group>
+                                <group width="0.5" height="1" alignment="left" id="I7g-qu-9iC">
+                                    <items>
+                                        <button width="120" height="100" alignment="center" verticalAlignment="center" title="Next" id="cLg-Pm-Qda"/>
+                                    </items>
+                                    <edgeInsets key="margins" left="5" right="5" top="5" bottom="5"/>
+                                </group>
+                            </items>
+                            <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="0.0"/>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="467.86956521739125" y="343.79464285714289"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -31,7 +116,7 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider=""/>
+                <controller id="4sK-HA-Art" customClass="NotificationController"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
